--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -30,7 +30,8 @@
     </div>
 </div>  -->
 
-<div class="container mx-auto" *ngFor = "let posts of postsArray">
+<div class="container mx-auto" *ngFor="let posts of postsArray">
+    <!-- <div class="container mx-auto">
     <div class="row">
         <div class="col">
             <div class="card " style="width: 14rem;">
@@ -55,4 +56,108 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+    <div class="container mx-auto">
+
+        <div class="card " style="width: 24rem; height:19rem;">
+            <form class="card-details ">
+                <div class="form-group">
+
+                    <div class="row">
+                        <div id="d23" class="col">
+                            <p>hello guys,i have no work so i need this money because i am so sick</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div id="d11" class="col">
+                            <p class="need ">Need Category</p>
+
+                        </div>
+                        <div id="d13" class="col">
+                            <p class="need">Required Amount</p>
+
+                        </div>
+                        <div id="d12" class="col">
+                            <p class="need">Rest Amount</p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div id="d11" class="col">
+                            <p class="text-dark ">medicine</p>
+
+                        </div>
+                        <div id="d13" class="col">
+                            <p class="text-dark  ">400</p>
+
+                        </div>
+                        <div id="d12" class="col">
+                            <p class="text-dark  ">200</p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="div5"><button type="submit"> Donate <i>♥</i> </button></div>
+                        </div>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+
+    </div>
+
+    <!-- <div class="container ">
+
+    <div class="card " style="width: 24rem; height:19rem;">
+        <form class="card-details ">
+            <div class="form-group">
+
+                <div class="row">
+                    <div class="col">
+                        <p>hello guys,i have no work so i need this money because i am so sick</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                        <p class="need ">Need Category</p>
+
+                    </div>
+                    <div class="col">
+                        <p class="need">Required Amount</p>
+
+                    </div>
+                    <div class="col">
+                        <p class="need">Rest Amount</p>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="text-dark ">medicine</p>
+
+                    </div>
+                    <div class="col">
+                        <p class="text-dark  ">400</p>
+
+                    </div>
+                    <div class="col">
+                        <p class="text-dark  ">200</p>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="div5"><button type="submit"> Donate <i>♥</i> </button></div>
+                    </div>
+                </div>
+            </div>
+
+        </form>
+    </div>
+
+</div> -->
