--- a/GiveLife-frontend/src/app/components/cupons/cupons.component.html
+++ b/GiveLife-frontend/src/app/components/cupons/cupons.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<app-cupon>
 
-<app-cupon></app-cupon>
+</app-cupon>
 <!-- <app-cupon></app-cupon>
 <app-cupon></app-cupon>
 <app-cupon></app-cupon>
