--- a/GiveLife-frontend/src/app/components/posts/posts.component.css
+++ b/GiveLife-frontend/src/app/components/posts/posts.component.css
@@ -31,12 +31,12 @@ body {
 }
 
 .card {
-    margin: 10px;
+    /* margin: 10px; */
     display: grid;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     border-radius: 15px;
-    margin: 50px 0 50px;
+    margin: 20px 0 50px;
     padding: 15px;
     padding-bottom: 20px !important
 }
@@ -44,11 +44,14 @@ body {
 app-post {
     display: inline-block;
     justify-content: center;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    /* margin: 0 auto;
-  
-    float: none;
-    
-    margin-bottom: 10px; */
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+#publichstyle {
+    margin: 0.6rem;
+    clear: both;
+    float: right;
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
 }
