--- a/GiveLife-frontend/src/app/components/profile/profile.component.html
+++ b/GiveLife-frontend/src/app/components/profile/profile.component.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-
 <!-- <div class="container">
     <div class="row no-gutters">
         <div class="col">
@@ -27,12 +25,14 @@
                     <div class="row m-l-0 m-r-0">
                         <div class="col-sm-4 bg-c-lite-green user-profile">
                             <div class="card-block text-center text-white">
-                                <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
+                                <!-- <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div> -->
+                                <br>
+                                <br>
                                 <h6 class="f-w-600">Youssef Elsayed</h6>
                                 <p>Region Coordinator</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
-                                <div class="col-sm-6">
-                                    <a style="margin-left:2rem;" class="btn btn-outline-light" routerLink="/home" (click)="LogoutClick()">Logout</a>
-                                </div>
+
+                                <a class="btn btn-outline-light" routerLink="/home" (click)="LogoutClick()">Logout</a>
+
                             </div>
                         </div>
                         <div class="col-sm-8">
@@ -78,6 +78,15 @@
     </div>
 </div>
 <hr class="new4">
+<app-post></app-post>
+<app-post></app-post>
+<app-post></app-post>
+<app-post></app-post>
+<app-post></app-post>
+<app-post></app-post>
+<app-post></app-post>
+<app-post></app-post>
+<app-post></app-post>
 <app-post></app-post>
 <!-- <button class="btn btn-lg btn-outline-primary" (click)="openpostform(postform)">Post form</button>
 <br>
