update profile component

--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container divkbera">
+<div class="container divkbera">
     <div class="row">
         <div class="col-md">
             <div class="parent" *ngFor="let item of postsArray">
