--- a/GiveLife-frontend/src/app/components/donate/donate.component.html
+++ b/GiveLife-frontend/src/app/components/donate/donate.component.html
@@ -1,6 +1,7 @@
-<p>donate works!</p>
+<!--p>donate works!</p-->
 
 <!-- <input type="button" value="Close" (click)="close()"> -->
+
 <div class="modal-header" >
     <h1 class="pull-left">Donate</h1>
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
