--- a/GiveLife-frontend/src/app/components/post/post.component.css
+++ b/GiveLife-frontend/src/app/components/post/post.component.css
@@ -1,67 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
-
-/* //salmaaaa */
-
-
-/* * {
-    box-sizing: border-box;
-    font-family: 'Mitr', sans-serif;
-}
-
-.divkbera {
-    padding: 20px;
-}
-
-.divsmall {
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-}
-
-.parent {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    margin-top: 120px;
-}
-
-.div1 {
-    grid-area: 1 / 2 / 2 / 5;
-}
-
-.div2 {
-    grid-area: 2 / 2 / 3 / 3;
-    margin-top: 45px;
-    padding-right: 3px;
-}
-
-.div3 {
-    grid-area: 2 / 3 / 3 / 4;
-    padding-top: 45px;
-    margin-right: 3px;
-}
-
-.div4 {
-    grid-area: 2 / 4 / 3 / 5;
-    padding-top: 45px;
-}
-
-.div5 {
-    grid-area: 3 / 3 / 4 / 4;
-    margin-top: 0px;
-    padding: 10px;
-} */
-
-
-/* input,
-textarea {
-    border: 1px #F74F22 solid;
-    border-radius: 30px;
-    outline: none;
-} */
-
-button {
+button:not(.close) {
     width: 100%;
     height: 55px;
     border: 1px;
@@ -98,23 +36,13 @@ body {
     padding-bottom: 10px !important
 }
 
+app-post {
+    display: inline-block;
+    justify-content: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 .need {
     color: #F74F22;
 }
-
-
-/* #d11 {
-    background-color: red;
-}
-
-#d12 {
-    background-color: bllue;
-}
-
-#d13 {
-    background-color: yellow;
-}
-
-#d23 {
-    background-color: green;
-} */
