--- a/GiveLife-frontend/src/app/components/posts/posts.component.css
+++ b/GiveLife-frontend/src/app/components/posts/posts.component.css
@@ -41,7 +41,7 @@ body {
     padding-bottom: 20px !important
 }
 
-app-post {
+.manyofcards {
     display: inline-block;
     justify-content: center;
     padding-left: 1rem;
@@ -54,4 +54,13 @@ app-post {
     float: right;
     padding-left: 1.7rem;
     padding-right: 1.7rem;
+}
+
+.msg {
+    font-size: small;
+    color: black;
+    border: none;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
