route donate now

--- a/GiveLife-frontend/src/app/components/header/header.component.html
+++ b/GiveLife-frontend/src/app/components/header/header.component.html
@@ -23,13 +23,13 @@
         </li>
 
         <li class="nav-item">
-            <button type="button" id="tomakespace" style="margin-top: 0.41rem;" (click)="opendonateform(donateform)" class="btn btn-outline-danger">DONATE NOW <i>♥</i> </button>
+            <button type="button" id="tomakespace" style="margin-top: 0.41rem;" href="posts" routerLink="/posts" (click)="PostsClick();" class="btn btn-outline-danger">DONATE NOW <i>♥</i> </button>
         </li>
 
     </ul>
 </nav>
 
-<ng-template #donateform let-modal>
+<!-- <ng-template #donateform let-modal>
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">
             Step of Help
@@ -55,4 +55,4 @@
             </div>
         </form>
     </div>
-</ng-template>
+</ng-template> -->
