--- a/GiveLife-frontend/src/app/components/posts/posts.component.html
+++ b/GiveLife-frontend/src/app/components/posts/posts.component.html
@@ -5,7 +5,7 @@
 
 <app-post></app-post>
 
-<ng-template #postform let-modal class="manyofcards">
+<ng-template #postform let-modal>
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">
             Write a Post
