--- a/GiveLife-frontend/src/app/components/header/header.component.html
+++ b/GiveLife-frontend/src/app/components/header/header.component.html
@@ -9,7 +9,14 @@
 
         </li>
     </ul>
-
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active text-dark mb-0 h6" href="Home">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active text-dark mb-0 h6" href="Posts">Posts</a>
+        </li>
+    </ul>
     <ul class="nav justify-content-end">
 
         <li class="nav-item dropdown">
