--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -81,13 +81,27 @@
         <!-- model -->
         <div class="modal-body">
             <form name="donateform" #donateform="ngForm" (ngSubmit)="donateToPost(Amount.value)">
+
                 <div class="row">
                     <div class="col-md">
                         <div class="parent">
                             <br>
-                            <div class="div2"><input class="form-control" #Amount placeholder="Donated Amount.."></div>
+                            <div class="div2">
+                                <input class="form-control" name="Amount" #Amount [(ngModel)]="donnation.Amount" placeholder="Donated Amount.." required pattern="^[0-9]*$">
+                            </div>
                             <br>
-                            <button class="div5 " type=" submit " (click)="modal.dismiss('Cross click')">Donate <i>♥</i> </button>
+                            <div class="alert alert-warning" role="alert" *ngIf="donateform.controls.Amount?.touched && donateform.controls.Amount.errors">
+
+                                <span *ngIf="donateform.controls.Amount.errors.required"> donnation is required</span>
+                                <span *ngIf="donateform.controls.Amount.errors.pattern">enter valid amount of money</span>
+                            </div>
+                            <br>
+                            <div class="alert alert-warning" role="alert" *ngIf="customError.flag">
+                                <span>{{customError.serverError}}</span>
+
+                            </div>
+                            <br> <button class="div5 " type=" submit " [disabled]="donateform.invalid==true&&customError.flag==false">Donate <i>♥</i> </button>
+
                         </div>
                     </div>
                 </div>
