--- a/GiveLife-frontend/src/app/components/header/header.component.html
+++ b/GiveLife-frontend/src/app/components/header/header.component.html
@@ -25,6 +25,7 @@
                 <li *ngIf="!isLogin()"><a class="dropdown-item" href="signin" routerLink="/signin" (click)="SignInClick();">Sign In</a></li>
                 <li *ngIf="!isLogin()"><a class="dropdown-item" href="signup" routerLink="/signup" (click)="SignUpClick();">Sign Up</a></li>
                 <li *ngIf="isLogin()"><a class="dropdown-item" href="profile" routerLink="/profile" (click)="ProfileClick();">Profile</a></li>
+                <li *ngIf="isLogin()"><a class="dropdown-item" href="home" routerLink="/home" (click)="LogoutClick();">Sign Out</a></li>
 
             </ul>
 
