--- a/GiveLife-frontend/src/app/components/profile/profile.component.html
+++ b/GiveLife-frontend/src/app/components/profile/profile.component.html
@@ -9,7 +9,7 @@
                                 <!-- <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div> -->
                                 <br>
                                 <br>
-                                <h6 class="f-w-600">Youssef Elsayed</h6>
+                                <h6 class="f-w-600">{{coordinator?.name}}</h6>
                                 <p>Region Coordinator</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
 
                                 <a class="btn btn-outline-light" routerLink="/home" (click)="LogoutClick()">Logout</a>
@@ -22,11 +22,11 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <p class="m-b-10 f-w-600">Region</p>
-                                        <h6 class="text-muted f-w-400">Ismailia</h6>
+                                        <h6 class="text-muted f-w-400">{{coordinator?.region.name}}</h6>
                                     </div>
                                     <div class="col-sm-6">
                                         <p class="m-b-10 f-w-600">Wallet Balance</p>
-                                        <h6 class="text-muted f-w-400">400.00</h6>
+                                        <h6 class="text-muted f-w-400">{{coordinator?.walletBalance}}</h6>
                                     </div>
                                 </div>
                                 <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Magesterials</h6>
