--- a/GiveLife-frontend/src/app/components/profile/profile.component.html
+++ b/GiveLife-frontend/src/app/components/profile/profile.component.html
@@ -59,3 +59,69 @@
     </div>
 </div>
 <hr class="new4">
+
+<div class="container mx-auto" *ngFor="let item of postsArray">
+
+    <div class="container mx-auto">
+
+        <div class="card " style="width: 24rem; height:19rem;">
+            <form class="card-details ">
+                <div class="form-group">
+
+                    <div class="row">
+                        <div id="d23" class="col">
+                            <p>{{item.postTxt}}</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div id="d11" class="col">
+                            <p class="need ">Need Category</p>
+
+                        </div>
+                        <div id="d13" class="col">
+                            <p class="need">Required Amount</p>
+
+                        </div>
+                        <div id="d12" class="col">
+                            <p class="need">Rest Amount</p>
+                        </div>
+                        <div id="d12" class="col">
+                            <p class="need">Status</p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div id="d11" class="col">
+
+                            <p class="text-dark " *ngIf="item.needCatogry==0">Food</p>
+                            <p class="text-dark " *ngIf="item.needCatogry==1">Medicine</p>
+                            <p class="text-dark " *ngIf="item.needCatogry==2">Money</p>
+                            <p class="text-dark " *ngIf="item.needCatogry==3">Cloths</p>
+
+                        </div>
+                        <div id="d13" class="col">
+                            <p class="text-dark  ">{{item.requiredAmount}}</p>
+
+                        </div>
+                        <div id="d12" class="col">
+                            <p class="text-dark  ">{{item.restAmount}}</p>
+                        </div>
+                        <div id="d12" class="col">
+                            <p class="text-dark  ">{{item.status}}</p>
+                        </div>
+
+                    </div>
+                    <!-- <div class="row">
+                        <div class="col">
+                            <div class="div5"><button type="submit" (click)="opendonateform(donateform,item.postId)"> Donate <i>♥</i> </button></div>
+                        </div>
+                    </div> -->
+                </div>
+
+            </form>
+        </div>
+
+    </div>
+
+</div>
