--- a/GiveLife-frontend/src/app/components/sign-in/sign-in.component.html
+++ b/GiveLife-frontend/src/app/components/sign-in/sign-in.component.html
@@ -9,7 +9,8 @@
 
                         <!-- National ID -->
                         <div class="form-group">
-                            <input class="form-control formElement" type="text" #NID="ngModel" [(ngModel)]="userService.selectedUser.NID" name="NID" placeholder="National ID" required minlength="14" pattern="(2|3)[0-9][1-9][0-1][1-9][0-3][1-9](01|02|03|04|11|12|13|14|15|16|17|18|19|21|22|23|24|25|26|27|28|29|31|32|33|34|35|88)\d\d\d\d\d">
+                            <input class="form-control formElement" type="text" #NID="ngModel" [(ngModel)]="userService.selectedUser.NID" name="NID" placeholder="National ID" required minlength="14">
+                            <!-- pattern="(2|3)[0-9][1-9][0-1][1-9][0-3][1-9](01|02|03|04|11|12|13|14|15|16|17|18|19|21|22|23|24|25|26|27|28|29|31|32|33|34|35|88)\d\d\d\d\d" -->
                             <div class="msg alert alert-warning" role="alert" *ngIf="NID.touched && NID.errors">
                                 <span *ngIf="NID.errors.required">National ID is required.... </span>
                                 <span *ngIf="NID.errors.pattern">National ID pattern is wroong.... </span>
