--- a/GiveLife-frontend/src/app/components/profile/profile.component.html
+++ b/GiveLife-frontend/src/app/components/profile/profile.component.html
@@ -60,7 +60,7 @@
 </div>
 <hr class="new4">
 
-<div class="container mx-auto" *ngFor="let item of postsArray">
+<!-- <div class="container mx-auto" *ngFor="let item of postsArray">
 
     <div class="container mx-auto">
 
@@ -117,11 +117,11 @@
                             <div class="div5"><button type="submit" (click)="opendonateform(donateform,item.postId)"> Donate <i>♥</i> </button></div>
                         </div>
                     </div> -->
-                </div>
+                <!-- </div>
 
             </form>
         </div>
 
     </div>
 
-</div>
+</div>  -->
