--- a/GiveLife-frontend/src/app/components/profile/profile.component.html
+++ b/GiveLife-frontend/src/app/components/profile/profile.component.html
@@ -64,7 +64,14 @@
 
     <div class="container mx-auto">
 
-        <div class="card " style="width: 24rem; height:19rem;">
+        <div class="card " style="width: 24rem; height:19rem; margin: 10px;
+        display: grid;
+        border-radius: 5px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        border-radius: 15px;
+        margin: 50px 0 50px;
+        padding: 15px;
+        padding-bottom: 10px !important">
             <form class="card-details ">
                 <div class="form-group">
 
