--- a/GiveLife-frontend/src/app/components/header/header.component.html
+++ b/GiveLife-frontend/src/app/components/header/header.component.html
@@ -11,10 +11,10 @@
     </ul>
     <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a class="nav-link active text-dark mb-0 h6" href="Home" routerLink="/home" (click)="HomeClick();">Home</a>
+            <a class="nav-link active text-dark mb-0 h6" routerLink="/home" (click)="HomeClick();">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active text-dark mb-0 h6" href="Posts" routerLink="/posts" (click)="PostsClick();">Posts</a>
+            <a class="nav-link active text-dark mb-0 h6" routerLink="/posts" (click)="PostsClick();">Posts</a>
         </li>
     </ul>
     <ul class="nav justify-content-end">
