--- a/GiveLife-frontend/src/app/components/sign-up/sign-up.component.html
+++ b/GiveLife-frontend/src/app/components/sign-up/sign-up.component.html
@@ -23,8 +23,8 @@
 
                         <!-- National ID -->
                         <div class="form-group">
-                            <input class="form-control formElement" type="text" #NID="ngModel" [(ngModel)]="userService.selectedUser.NID" name="NID" placeholder="National ID" required minlength="14">
-                            <!-- pattern="(2|3)[0-9][1-9][0-1][1-9][0-3][1-9](01|02|03|04|11|12|13|14|15|16|17|18|19|21|22|23|24|25|26|27|28|29|31|32|33|34|35|88)\d\d\d\d\d" -->
+                            <input class="form-control formElement" type="text" #NID="ngModel" [(ngModel)]="userService.selectedUser.NID" name="NID" placeholder="National ID" required minlength="14" pattern="(2|3)[0-9][1-9][0-1][1-9][0-3][1-9](01|02|03|04|11|12|13|14|15|16|17|18|19|21|22|23|24|25|26|27|28|29|31|32|33|34|35|88)\d\d\d\d\d">
+
 
 
                             <div class="msg alert alert-warning" role="alert" *ngIf="NID.touched && NID.errors">
@@ -37,8 +37,7 @@
 
                         <!-- Visa -->
                         <div class="form-group">
-                            <input class="form-control formElement" type="text" #visa="ngModel" [(ngModel)]="userService.selectedUser.visa" name="visa" placeholder="Visa" required>
-                            <!-- pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$" -->
+                            <input class="form-control formElement" type="text" #visa="ngModel" [(ngModel)]="userService.selectedUser.visa" name="visa" placeholder="Visa" required pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$">
 
 
                             <div class="msg alert alert-warning" role="alert" *ngIf="visa.touched && visa.errors">
